--- a/css/misEstilos.css
+++ b/css/misEstilos.css
@@ -1,27 +1,34 @@
+@import url(parrafos.css);
+
+h1{
+	color: blue;
+	background: red;
+	text-align: center;
+}
+div{
+	color: green;
+	background: yellow;
+	margin: auto;
+}
 h1, div{
-	font-family: Arial, Helvetica, sans-serif;
-	text-align: center;
-}
-form fieldset{
-	text-align: center;
-}
-a{
-	color: #F0433A;
+	font-family: Arial, sans-serif;
+	width: 500px;
 }
 form{
-	width: 1100px;
+	width: 500px;
 	font: normal bold 12px Verdana, Arial;
 }
-form label{
+form label {
 	display: inline-block;
 	width: 150px;
-	margin-right: 100px;
 }
-form input{
+form input {
 	display: inline-block;
 	width: 200px;
 	margin-bottom: 10px;
 }
-h1{
-	background: red;
+/*Este es un ejemplo universal*/
+*{
+	margin: 0;
+	padding: 0;
 }
